--- a/config/boards/arm/bt60/bt60_defconfig
+++ b/config/boards/arm/bt60/bt60_defconfig
@@ -34,3 +34,10 @@ CONFIG_PWM=y
 CONFIG_LED_PWM=y
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_BUILD_OUTPUT_UF2=y
+
+# Lower USB polling interval
+CONFIG_USB_HID_POLL_INTERVAL_MS=1
+
+# Lower debounce
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
