--- a/config/boards/arm/bt60/Kconfig
+++ b/config/boards/arm/bt60/Kconfig
@@ -5,3 +5,11 @@ config BOARD_ENABLE_DCDC
 	select SOC_DCDC_NRF52X
 	default y
 	depends on BOARD_BT60
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# Lower USB polling interval
+CONFIG_USB_HID_POLL_INTERVAL_MS=1
+
+# Lower debounce
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
